# HPC-Ops

./: .env.sample  .gitignore  README.md  front_app.py  pyproject.toml  tutorial.ipynb
.github/workflows/: ci.yaml
app/: job_script.py  logging_config.yaml  main.py
app/api/: create_job.py  monitor_job.py
app/core/: base_flow_logic.py
app/schema/: create_job_schema.py  monitor_job_schema.py
app/services/: job_executor.py  job_manager.py
app/utils/: config.py
data/: optuna-example.pkl
flow_logics/: optuna_example.py
