[project]
name = "hpc-ops"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "KaitoShioya", email = "arm9lorderhax@gmail.com" }
]
dependencies = [
    "pip>=25.1.1",
    "ipykernel>=6.29.5",
    "aiohttp>=3.12.0",
    "fastapi==0.100.0",
    "lightgbm==3.3.0",
    "matplotlib~=3.5.2",
    "numpy==1.23.5",
    "optuna==3.4.0",
    "pandas~=1.3.5",
    "pydantic==2.0.2",
    "pydantic-settings==2.0.0",
    "pyyaml==6.0",
    "requests~=2.29.0",
    "scikit-learn==1.3.1",
    "statsmodels==0.14.0",
    "slack-sdk==3.11.2",
    "urllib3~=1.26.15",
    "uvicorn==0.22.0",
    "wandb>=0.19.11",
    "plotly>=6.1.1",
    "nbformat>=5.10.4",
    "python-dotenv>=1.1.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.11.11",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/hpc_ops"]
